[project]
name = "jumbl-assignment"
version = "0.1.0"
description = ""
authors = [
    {name = "Karan Jindal",email = "karanjindal.dev@gmail.com"}
]
requires-python = ">=3.13, <4.0.0"
dependencies = [
    "langchain (>=1.3.1,<2.0.0)",
    "langchain-huggingface (>=1.2.2,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
